==> una1veritas/ARMWork/armcmx/tools/SDFatFs/mmc_spi.c <==
#include "spi_core.h"
#include "mmc_sd.h"
#define	CCLK		100000000UL	/* cclk frequency [Hz] */
#define PCLK_SSP	50000000UL	/* PCLK frequency for SSP [Hz] */
#define SCLK_FAST	25000000UL	/* SCLK frequency under normal operation [Hz] */
#define	SCLK_SLOW	400000UL	/* SCLK frequency under initialization [Hz] */
#define	INS			digitalRead(PIO1_16)
#define	WP			0 /* Card write protection (true:yes, false:no) */
#define	SSPxDR		LPC_SSP0->DR
#define	SSPxSR		LPC_SSP0->SR
#define	SSPxCR0		LPC_SSP0->CR0
#define	SSPxCR1		LPC_SSP0->CR1
#define	SSPxCPSR	LPC_SSP0->CPSR
#define	CS_LOW()	{ LPC_GPIO->CLR[0] = _BV(2); LPC_GPIO->CLR[1] = _BV(19); }	// Set P0.2 low
#define	CS_HIGH()	{ LPC_GPIO->SET[0] = _BV(2); LPC_GPIO->SET[1] = _BV(19); }	// Set P0.2 high
#define PCSSPx		PCSSP0
#define	PCLKSSPx	PCLK_SSP0
#define	SSPxDR		LPC_SSP1->DR
#define	SSPxSR		LPC_SSP1->SR
#define	SSPxCR0		SSP1CR0
#define	SSPxCR1		SSP1CR1
#define	SSPxCPSR	SSP1CPSR
#define	CS_LOW()	{ LPC_GPIO->CLR[0] = _BV(2);}	// Set P0.2 low
#define	CS_HIGH()	{ LPC_GPIO->SET[0] = _BV(2);}	// Set P0.2 high
#define PCSSPx		PCSSP1
#define	PCLKSSPx	PCLK_SSP1
#define CS_HIGH()  { digitalWrite(PIO0_2, HIGH); }
#define CS_LOW()   { digitalWrite(PIO0_2, LOW); }
#define SD_SLOTEMPTY()  digitalRead(SD_DETECT)
#define PCLKDIV_SSP	PCLKDIV_1
#define PCLKDIV_SSP	PCLKDIV_2
#define PCLKDIV_SSP	PCLKDIV_4
#define PCLKDIV_SSP	PCLKDIV_8
#define FCLK_FAST() { SPI0Def.SSPx->CPSR = (PCLK_SSP / SCLK_FAST) & ~1; }

static
void rcvr_spi_multi (
	BYTE *buff,		/* Pointer to data buffer */
	UINT btr		/* Number of bytes to receive (16, 64 or 512) */
)
{
	UINT n; // = 512;
	WORD d;

	//SPI0Def.SSPx->CR0 = 0x000F; //SSPxCR0 = 0x000F;				/* Select 16-bit mode */
  SPI_DataSize(&SPI0Def, SPI_DSS_16BIT);
  
	for (n = 0; n < 8; n++)			/* Push 8 frames into pipeline  */
		SPI0Def.SSPx->DR = 0xFFFF;
	btr -= 16;
	while (btr) {					/* Receive the data block into buffer */
		while (!(SPI0Def.SSPx->SR & SSPSR_RNE /*_BV(2)*/)) ;
		d = SPI0Def.SSPx->DR;
		SPI0Def.SSPx->DR = 0xFFFF;
		*buff++ = d >> 8;
		*buff++ = d;
		btr -= 2;
	}
	for (n = 0; n < 8; n++) {		/* Pop remaining frames from pipeline */
		while (!(SPI0Def.SSPx->SR & SSPSR_RNE /*_BV(2)*/)) ;  // while RNE is off
		d = SPI0Def.SSPx->DR;
		*buff++ = d >> 8;
		*buff++ = d;
	}

	//SPI0Def.SSPx->CR0 = 0x0007;				/* Select 8-bit mode */
  SPI_DataSize(&SPI0Def, SPI_DSS_8BIT);
}

static void rcvr_spi_multi(BYTE *buff,	UINT btr /* Number of bytes to receive (16, 64 or 512) */ ) {
  int i;

  SPI_DataSize(&SPI0Def, SPI_DSS_8BIT);

  for ( i = 0; i < btr; i++) {
    /*
    SPI0Def.SSPx->DR = 0xff; //buff[i];
    while ( !(SPI0Def.SSPx->SR & SSPSR_RNE) || (SPI0Def.SSPx->SR & SSPSR_BSY) );
    buff[i] = SPI0Def.SSPx->DR;
    */ 
    buff[i] = SPI_transfer(&SPI0Def, 0xff);
  }
}

static
void xmit_spi_multi (
	const BYTE *buff,	/* Pointer to the data */
	UINT btx			/* Number of bytes to send (512) */
)
{
	UINT n; // = 512;
	WORD d;

	//SPI0Def.SSPx->CR0 = 0x000F;			/* Select 16-bit mode */
  SPI_DataSize(&SPI0Def, SPI_DSS_16BIT);

  /*
	for (n = 0; n < 8; n++) {	// Push 8 frames into pipeline
		d = *buff++;
		d = (d << 8) | *buff++;
		SPI0Def.SSPx->DR = d;
	}
	btx -= 16;
	do {						// Transmit data block 
		d = *buff++;
		d = (d << 8) | *buff++;
		while (!(SPI0Def.SSPx->SR & SSPSR_RNE )); // _BV(2) )) ;
		SPI0Def.SSPx->DR; SPI0Def.SSPx->DR = d;
	} while (btx -= 2);
	for (n = 0; n < 8; n++) {
		while (!(SPI0Def.SSPx->SR & SSPSR_RNE )); //_BV(2) )) ;
		SPI0Def.SSPx->DR;
	}
  */
  for(n = 0; n < btx; n++) {
    d = *buff++;
    d <<= 8;
    d |= *buff++;
    d = SPI_transfer(&SPI0Def, 0xff);
  }
  
	//SPI0Def.SSPx->CR0 = 0x0007;			// Select 8-bit mode 
  SPI_DataSize(&SPI0Def, SPI_DSS_8BIT);
}

static
void power_on (void)	/* Enable SSP module and attach it to I/O pads */
{
  
#if 0
	__set_PCONP(PCSSPx, 1);		/* Enable SSP module */
	__set_PCLKSEL(PCLKSSPx, PCLKDIV_SSP);	/* Select PCLK frequency for SSP */
	SSPxCR0 = 0x0007;			/* Set mode: SPI mode 0, 8-bit */
	SSPxCR1 = 0x2;				/* Enable SSP with Master */
#endif    
        SSP_IOConfig( 0 );
        SSP_Init(0);
          
#if SSP_CH == 0
//	__set_PINSEL(0, 15, 2);		/* Attach SCK0 to I/O pad */
//	__set_PINSEL(0, 16, 2);		/* Attach MISO0 to I/O pad */
//	__set_PINSEL(0, 17, 2);		/* Attach MOSI0 to I/O pad */
        pinMode(PIO0_2, OUTPUT);
        pinMode(PIO1_19, OUTPUT);
        
        //	FIO0DIR |= _BV(18);	/* Set CS# as output */
#elif SSP_CH == 1
//	__set_PINSEL(0, 7, 2);		/* Attach SCK1 to I/O pad */
//	__set_PINSEL(0, 8, 2);		/* Attach MISO1 to I/O pad */
//	__set_PINSEL(0, 9, 2);		/* Attach MOSI1 to I/O pad */
//	FIO0DIR |= _BV(6);	/* Set CS# as output */
#endif
	CS_HIGH();					/* Set CS# high */

        delay(10);
//	for (Timer1 = 10; Timer1; ) ;	/* 10ms */
}

static
void power_on (void)	/* Enable SSP module and attach it to I/O pads */
{
  
  
#if 0
	__set_PCONP(PCSSPx, 1);		/* Enable SSP module */
	__set_PCLKSEL(PCLKSSPx, PCLKDIV_SSP);	/* Select PCLK frequency for SSP */
	SSPxCR0 = 0x0007;			/* Set mode: SPI mode 0, 8-bit */
	SSPxCR1 = 0x2;				/* Enable SSP with Master */
#endif    
//        SSP_IOConfig( 0 );
//        SSP_Init(0);
          
	CS_HIGH();					/* Set CS# high */
  delay(10);
//	for (Timer1 = 10; Timer1; ) ;	/* 10ms */
  if ( SD_SLOTEMPTY() ) {
    Stat |= STA_NODISK;
  } else {
    Stat &= ~STA_NODISK;
  }
}
