==> profdc9/Apple2Card/Apple2Arduino/mmc_avr_spi.c <==
#include <Arduino.h>
#include <avr/io.h>
#include "diskio_sdc.h"
#include "mmc_avr.h"
#include "pindefs.h"
#define CS_LOW()		do { PORTB &= (slotno ?  ~0x02 : ~0x04); } while (0) /* Set MMC_CS = low */
#define	CS_HIGH()		do { PORTB |= 0x07; } while (0) /* Set MMC_CS = high */
#define MMC_CD			(1)	/* Test if card detected.   yes:true, no:false, default:true */
#define MMC_WP			(0)	/* Test if write protected. yes:true, no:false, default:false */
#define	FCLK_SLOW()		do { SPCR |= (_BV(SPR0)|_BV(SPR1)); } while (0)	/* Set SPI clock for initialization (100-400kHz) */
#define	FCLK_FAST()		do { SPCR &= ~(_BV(SPR0)|_BV(SPR1)); } while (0)	/* Set SPI clock for read/write (20MHz max) */
#define PULLUP_OFF()    do { PORTB &= ~0x10; } while (0)
#define PULLUP_ON()     do { PORTB |= 0x10; } while (0)
#define CMD0	(0)			/* GO_IDLE_STATE */
#define CMD1	(1)			/* SEND_OP_COND (MMC) */
#define	ACMD41	(0x80+41)	/* SEND_OP_COND (SDC) */
#define CMD8	(8)			/* SEND_IF_COND */
#define CMD9	(9)			/* SEND_CSD */
#define CMD10	(10)		/* SEND_CID */
#define CMD12	(12)		/* STOP_TRANSMISSION */
#define ACMD13	(0x80+13)	/* SD_STATUS (SDC) */
#define CMD16	(16)		/* SET_BLOCKLEN */
#define CMD17	(17)		/* READ_SINGLE_BLOCK */
#define CMD18	(18)		/* READ_MULTIPLE_BLOCK */
#define CMD23	(23)		/* SET_BLOCK_COUNT (MMC) */
#define	ACMD23	(0x80+23)	/* SET_WR_BLK_ERASE_COUNT (SDC) */
#define CMD24	(24)		/* WRITE_BLOCK */
#define CMD25	(25)		/* WRITE_MULTIPLE_BLOCK */
#define CMD32	(32)		/* ERASE_ER_BLK_START */

static
void power_on (void)
{
	cli();
  PORTB = 0x07;
	DDRB |= 0x07;
	PORTB = 0x07;
	SPCR = _BV(SPE) | _BV(MSTR);
	SPSR = _BV(SPI2X);
	DDRB |= 0x2F;
	PORTB = 0x3F;
	sei(); 
}

static
void rcvr_spi_multi (
	BYTE *p,	/* Data read buffer */
	UINT cnt	/* Size of data block */
)
{
	do {
		SPDR = 0xFF;
		loop_until_bit_is_set(SPSR, SPIF);
		*p++ = SPDR;
		SPDR = 0xFF;
		loop_until_bit_is_set(SPSR, SPIF);
		*p++ = SPDR;
	} while (cnt -= 2);
}

static
void xmit_spi_multi (
	const BYTE *p,	/* Data block to be sent */
	UINT cnt		/* Size of data block */
)
{
	do {
		SPDR = *p++;
		loop_until_bit_is_set(SPSR, SPIF);
		SPDR = *p++;
		loop_until_bit_is_set(SPSR, SPIF);
	} while (cnt -= 2);
}
